# yolobattle

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
analysis/darknet/: bbox_hotspots.py  confusion_matrix_tex.py  plot_common.py  plot_common_averaged.csv  plot_common_yolov7.py
analysis/darknet/artifacts/plot/: username_machine_pairings.py
apptainer/darknet/: apptainer.def
apptainer/ultralytics/: apptainer.def
docker/darknet/: Dockerfile
docker/ultralytics/: Dockerfile
slurm/darknet/: config.batch.yaml  script.in.slurm  script.slurm
slurm/ultralytics/: config.batch.yaml  script.in.slurm  script.slurm
src/yolobattle/: apptainer.py  console.py  docker.py
src/yolobattle/model_training/: coco_build_gt.py  coco_eval.py  coco_gt_dispatch.py  darknet_ultralytics_translation.py  datasets.py  evaluators_darknet.py  evaluators_ultra.py  export_coco_dets.py  profiles.py  train.py
tools/: move_runs.py
